--- a/firmware/mccar-sync/.cproject
+++ b/firmware/mccar-sync/.cproject
@@ -54,7 +54,7 @@
 									<listOptionValue builtIn="false" value="&quot;${MCUToolsBaseDir}/lib/hc08c/device/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${MCUToolsBaseDir}/lib/hc08c/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${MCUToolsBaseDir}/lib/hc08c/device/asm_include&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/mccar-sync/Sources}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}\Sources&quot;"/>
 								</option>
 								<inputType id="hcs08.toolchain.compiler.base.input.c.542693106" name="HCS08 Compiler C Input" superClass="hcs08.toolchain.compiler.base.input.c"/>
 								<inputType id="hcs08.toolchain.compiler.base.input.cpp.194687426" name="HCS08 Compiler CPP Input" superClass="hcs08.toolchain.compiler.base.input.cpp"/>
